--- a/apps/frontend/Pages/Shared/Components/Tables/CustOrderTable.razor
+++ b/apps/frontend/Pages/Shared/Components/Tables/CustOrderTable.razor
@@ -30,7 +30,7 @@
                     <td class="px-4 py-2">@order.CreatedAt.ToString("g")</td>
                     <td class="px-4 py-2 text-right">
                         <TableRowActions
-                            ColumnValueId="@order.ID"
+                            ColumnValueId="@order.Id"
                             OnView="OnView"
                             OnEdit="OnEdit"
                             OnDelete="OnDelete"
