fixed PasswordInput casing issue, switched dotnet to v8, changed role from admin to merchant in pages - CreateOrder, CreateStore, CreateUSer, ForgotPassword, Login, Register & Register-form

--- a/apps/frontend/Pages/Admin/Pages/CreateOrder.razor
+++ b/apps/frontend/Pages/Admin/Pages/CreateOrder.razor
@@ -1,6 +1,6 @@
 @page "/admin/createorder"
 @layout AdminLayout
 
-@attribute [Authorize(Roles = "admin")]
+@attribute [Authorize(Roles = "merchant")]
 
 <CreateOrderForm />
