--- a/apps/frontend/Pages/Admin/Pages/CreateStore.razor
+++ b/apps/frontend/Pages/Admin/Pages/CreateStore.razor
@@ -1,6 +1,6 @@
 @page "/admin/createstore"
 @layout AdminLayout
 
-@attribute [Authorize(Roles = "admin")]
+@attribute [Authorize(Roles = "merchant")]
 
 <CreateStoreForm />
