--- a/apps/frontend/Pages/Admin/Pages/CreateUser.razor
+++ b/apps/frontend/Pages/Admin/Pages/CreateUser.razor
@@ -1,6 +1,6 @@
 @page "/admin/createuser"
 @layout AdminLayout
 
-@attribute [Authorize(Roles = "admin")]
+@attribute [Authorize(Roles = "merchant")]
 
 <CreateUserForm />
