--- a/apps/frontend/Pages/Shared/Components/Inputs/PasswordInput.razor
+++ b/apps/frontend/Pages/Shared/Components/Inputs/PasswordInput.razor
@@ -4,36 +4,32 @@
 
 <div class="relative">
     <InputText 
-        value="@Value"
-        valueChanged="@(v => ValueChanged.InvokeAsync(v))"
-        valueExpression="ValueExpression"
-        type="@(Show ? "text" : "password")"
-        placeholder="@Placeholder"
+        Value="@Value" 
+        ValueChanged="@(v => ValueChanged.InvokeAsync(v))" 
+        ValueExpression="ValueExpression"
+        type="@(Show ? "text" : "password")" 
+        placeholder="@Placeholder" 
         class="@Class" />
 
-    <button type="button"
-            @onclick="Toggle"
-            class="absolute right-3 top-2.5 text-gray-600 hover:text-gray-800 focus:outline-none"
-            tabindex="-1">
+    <button type="button" @onclick="Toggle"
+        class="absolute right-3 top-2.5 text-gray-600 hover:text-gray-800 focus:outline-none" tabindex="-1">
 
         @if (Show)
         {
             <!-- Eye Off -->
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
-                 viewBox="0 0 24 24" stroke="currentColor">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M13.875 18.825A10.05 10.05 0 0112 19c-5 0-9-3.582-9-8s4-8 9-8a9.969 9.969 0 013.375.625m3.875 3.25A9.978 9.978 0 0121 11c0 4.418-4 8-9 8a9.978 9.978 0 01-2.887-.43M3 3l18 18" />
+                    d="M13.875 18.825A10.05 10.05 0 0112 19c-5 0-9-3.582-9-8s4-8 9-8a9.969 9.969 0 013.375.625m3.875 3.25A9.978 9.978 0 0121 11c0 4.418-4 8-9 8a9.978 9.978 0 01-2.887-.43M3 3l18 18" />
             </svg>
         }
         else
         {
             <!-- Eye -->
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
-                 viewBox="0 0 24 24" stroke="currentColor">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+                    d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
             </svg>
         }
     </button>
@@ -51,8 +47,9 @@
     [Parameter] public Expression<Func<string>>? ValueExpression { get; set; }
 
     [Parameter] public string Placeholder { get; set; } = "Password";
-    [Parameter] public string Class { get; set; } =
-        "w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500";
+    [Parameter]
+    public string Class { get; set; } =
+    "w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-green-500";
 
     private bool Show = false;
 
