replaced admin with merchant & new Routes dir for separate model routes

--- a/apps/frontend/Pages/Merchant/MerchantLayout.razor
+++ b/apps/frontend/Pages/Merchant/MerchantLayout.razor
@@ -1,5 +1,5 @@
 @inherits LayoutComponentBase
-@namespace frontend.Pages.Admin
+@namespace frontend.Pages.Merchant
 @using frontend.Pages.Shared.Layout
 
 <AuthorizedLayout>
