--- a/apps/frontend/Pages/Merchant/Pages/CreateOrder.razor
+++ b/apps/frontend/Pages/Merchant/Pages/CreateOrder.razor
@@ -1,5 +1,5 @@
-@page "/admin/createorder"
-@layout AdminLayout
+@page "/merchant/createorder"
+@layout MerchantLayout
 
 @attribute [Authorize(Roles = "merchant")]
 
