--- a/apps/frontend/Pages/Merchant/Pages/CreateUser.razor
+++ b/apps/frontend/Pages/Merchant/Pages/CreateUser.razor
@@ -1,5 +1,5 @@
-@page "/admin/createuser"
-@layout AdminLayout
+@page "/merchant/createuser"
+@layout MerchantLayout
 
 @attribute [Authorize(Roles = "merchant")]
 
