--- a/apps/frontend/Pages/Merchant/Pages/InvoicePage.razor
+++ b/apps/frontend/Pages/Merchant/Pages/InvoicePage.razor
@@ -1,5 +1,5 @@
-@page "/admin/invoices"
-@layout AdminLayout
+@page "/merchant/invoices"
+@layout MerchantLayout
 
 @* @inject InvoiceService InvoiceService *@
 
