--- a/apps/frontend/Pages/Merchant/Pages/LiveMap.razor
+++ b/apps/frontend/Pages/Merchant/Pages/LiveMap.razor
@@ -1,6 +1,6 @@
-@page "/admin/map"
-@layout AdminLayout
-@namespace frontend.Pages.Admin.LiveMap
+@page "/merchant/map"
+@layout MerchantLayout
+@namespace frontend.Pages.Merchant.LiveMap
 
 <div class="flex-1 overflow-hidden" style="height:calc(100vh - 4rem);">
     <RealTimeMap @ref="realTimeMap" Parameters="parameters" 
