--- a/apps/frontend/Pages/Merchant/Pages/Settings.razor
+++ b/apps/frontend/Pages/Merchant/Pages/Settings.razor
@@ -1,5 +1,5 @@
-@page "/admin/settings"
-@layout AdminLayout
+@page "/merchant/settings"
+@layout MerchantLayout
 @using System.ComponentModel.DataAnnotations
 @using System.Net.Http.Json
 @inject UserService UserService
