--- a/apps/frontend/Pages/Merchant/Pages/CreateStore.razor
+++ b/apps/frontend/Pages/Merchant/Pages/CreateStore.razor
@@ -1,5 +1,5 @@
-@page "/admin/createstore"
-@layout AdminLayout
+@page "/merchant/createstore"
+@layout MerchantLayout
 
 @attribute [Authorize(Roles = "merchant")]
 
